config + modify
config + modify after merge chef-cashier-auth into develop